# AWS-MLOps-EnergyForecasting-AnomalyDetection

./: .env.example  .gitignore  README.md  pyproject.toml  tmp_anomaly_payload.json  tmp_forecast_payload.json
.github/workflows/: ci.yml
glue/jobs/: bronze_to_silver.py  silver_to_gold.py
guides/: setup.md
lambda/ingestion/: app.py
sagemaker/anomaly_autoencoder_training/: inference.py  train.py
sagemaker/anomaly_one_class_svm_training/: inference.py  train.py
sagemaker/anomaly_residual_training/: inference.py  train.py
sagemaker/anomaly_training/: inference.py  requirements.txt  train.py
sagemaker/forecast_sarimax_training/: inference.py  requirements.txt  train.py
sagemaker/forecast_tft_training/: inference.py  requirements.txt  train.py
sagemaker/forecast_training/: inference.py  train.py
scripts/: deploy.py  deploy_anomaly_endpoint.py  deploy_forecast_endpoint.py  destroy.py  evaluate_model_package.py  invoke_anomaly_endpoint.py  invoke_forecast_endpoint.py  run_anomaly_autoencoder_training.py  run_anomaly_one_class_svm_training.py  run_anomaly_residual_training.py  run_anomaly_training.py  run_endpoint_smoke_tests.py  run_feature_store_ingestion.py  run_forecast_deepar_training.py  run_forecast_sarimax_training.py  run_forecast_tft_training.py  run_forecast_training.py  run_mlflow_tracking_smoke.py
tests/: test_bronze_to_silver_job.py  test_endpoint_smoke.py  test_feature_store.py  test_lambda_ingestion.py  test_ml_pipeline.py  test_model_evaluation.py  test_public_sources.py  test_settings.py  test_silver_to_gold_job.py
(+124 files in other folders)
