[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecasting-mlops"
version = "0.1.0"
description = "AWS MLOps scaffold for real-time energy forecasting and anomaly detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
